--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Clinton Burgos <clintburgos@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
+regex = "1.1.2"
 
 [[bin]]
 name = "ableton-git"
