--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Clinton Burgos <clintburgos@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
+fs_extra = "1.1.0"
 regex = "1.1.2"
 
 [[bin]]
