--- a/appveyor.yml
+++ b/appveyor.yml
@@ -57,11 +57,11 @@ cache:
   - C:\Users\appveyor\.cargo\registry
   - target
 
-branches:
-  only:
-    # Release tags
-    - /^v\d+\.\d+\.\d+.*$/
-    - master
+#branches:
+#  only:
+#    # Release tags
+#    - /^v\d+\.\d+\.\d+.*$/
+#    - master
 
 # Building is done in the test phase, so we disable Appveyor's build phase.
 build: false
