--- a/src/text/.gitattributes
+++ b/src/text/.gitattributes
@@ -5,4 +5,4 @@ Samples/** filter=lfs diff=lfs merge=lfs -text
 *.als filter=zcat
 
 # ensure LF line endings on pesky windows machines
-* text eol=lf
+* text=auto eol=lf
